# repair_management

./: .pre-commit-config.yaml  README.md  pyproject.toml  site_config.json
repair_management/: api.py  hooks.py  line_send.py  line_send.py.edit  line_send.py.orig  modules.txt
repair_management/fixtures/: c.json  custom_field.json
repair_management/old_fixture/: custom_TC.json  orig_custom_field.json
repair_management/portfolio/doctype/portfolio_stock_event/: portfolio_stock_event.js  portfolio_stock_event.json  portfolio_stock_event.py  test_portfolio_stock_event.py
repair_management/portfolio/doctype/portfolio_stock_name/: portfolio_stock_name.js  portfolio_stock_name.json  portfolio_stock_name.py  test_portfolio_stock_name.py
repair_management/public/js/: customer_heatmap.js  customer_heatmap.org.js  print_btn_custom.js  print_btn_custom.js.line  print_btn_custom.js.orig  print_btn_custom_org.js  print_btn_html2canva.js  repair_list.js  repair_list_list.js
repair_management/repair_management/api/: serial_rate_repair.py
repair_management/repair_management/belt_sf_calculator_bando_hp/belt_tools/: README.md
repair_management/repair_management/hvac_calc/hvac_calc/: README.md  pyproject.toml
repair_management/repair_management/hvac_calc/hvac_calc/hvac_calc/: hooks.py  modules.txt
repair_management/report/customer_purchase_list/: customer_purchase_list.js  customer_purchase_list.json
repair_management/www/: home.html  index.html  orig.print_jpg.html  print_jpg.html  print_jpg.py  repair-management.html  test_vue.bundle.js
(+64 files in other folders)
