[project]
name = "hvac_calc"
authors = [{ name = "Your Company", email = "admin@example.com" }]
description = "HVAC Air Calculator - CFM & Static Pressure (ASHRAE / AMCA) for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"
